# terraform-template-basic-serverless

./: .gitignore  README.md
.github/workflows/: deploy.yaml
lambda/: Dockerfile  Makefile  main.py  pyproject.toml
modules/aws/api_gateway/: main.tf  outputs.tf  variables.tf
modules/aws/cloudwatch_log_group/: main.tf  outputs.tf
modules/aws/iam_role/: main.tf  outputs.tf  variables.tf
modules/aws/lambda/: main.tf  outputs.tf  variables.tf
modules/aws/oidc_github_actions/: main.tf
modules/aws/route53/: main.tf  outputs.tf  variables.tf
modules/aws/route_table/: main.tf  outputs.tf  variables.tf
modules/aws/s3/: main.tf  outputs.tf
modules/aws/security_group/: main.tf  outputs.tf
modules/aws/subnet/: main.tf  outputs.tf  variables.tf
modules/aws/vpc/: main.tf
prd/: aws.tf  backend.tf  outputs.tf  variables.tf  versions.tf
