[project]
name = "serverless-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "SkipEveryLunch",email = "skipeverylunch@outlook.jp"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
